<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.sauray</groupId>
  <artifactId>example</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>example</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <slf4j.version>1.6.4</slf4j.version>
    <logback.version>1.0.1</logback.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>1.6.0</version>
        <configuration>
          <mainClass>net.sauray.application.Main</mainClass>
          <arguments>
            <argument>--enable-preview</argument>
          </arguments>
        </configuration>
      </plugin>
    </plugins>
  </build>


  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>



    <dependency>
      <groupId>com.typesafe.akka</groupId>
      <artifactId>akka-actor_2.13</artifactId>
      <version>2.6.3</version>
    </dependency>

     <dependency>
        <groupId>com.typesafe.akka</groupId>
        <artifactId>akka-persistence-typed_2.13</artifactId>
        <version>2.6.3</version>
      </dependency>

    <dependency>
      <groupId>com.typesafe.akka</groupId>
      <artifactId>akka-persistence-query_2.13</artifactId>
      <version>2.6.3</version>
      <exclusions>
        <exclusion>  <!-- declare the exclusion here -->
          <groupId>com.typesafe.akka</groupId>
          <artifactId>akka-actor</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>com.github.dnvriend</groupId>
      <artifactId>akka-persistence-jdbc_2.13</artifactId>
      <version>3.5.3</version>
      <exclusions>
        <exclusion>  <!-- declare the exclusion here -->
          <groupId>com.typesafe.akka</groupId>
          <artifactId>akka-actor</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>8.0.19</version>
    </dependency>

    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.8.6</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.0-alpha1</version>
    </dependency>

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.3.0-alpha5</version>
    </dependency>

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-core</artifactId>
      <version>1.3.0-alpha5</version>
    </dependency>


    <dependency>
      <groupId>org.jooq</groupId>
      <artifactId>jool</artifactId>
      <version>3.13.0</version>
    </dependency>


  </dependencies>
</project>
